fixed scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,23 +9,26 @@ html, body, :root{
   /* background: linear-gradient(185deg, #05000cbb,#15001fb0); */
 }
 
-::-webkit-scrollbar {
-  width: 10px;
-}
+@media only screen and (min-width: 768px) {
+  /* Styles for medium and large screens */
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
 
-/* Track */
-::-webkit-scrollbar-track {
-  border-radius: 5px;
-  background: #110e27;
-}
+  /* Track */
+  ::-webkit-scrollbar-track {
+    border-radius: 5px;
+    background: #110e27;
+  }
 
-/* Handle */
-::-webkit-scrollbar-thumb {
-  border-radius: 5px;
-  background: #36315f70;
-}
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background: #36315f70;
+  }
 
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #C850F2;
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #C850F2;
+  }
 }
